--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h1>Hola buen jueves</h1>
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore, dicta veritatis accusamus illum cum sed corporis quod reprehenderit. Dicta quidem porro cum eaque inventore non perferendis atque eum dignissimos ex</p>
+
+    <button class="boton">Apreta aca</button>
 </body>
 </html>
